<resources>
    <string name="app_name">SocialMacroPad</string>
    <string name="signup">Sign up</string>
    <string name="language">Language</string>
    <string name="title_activity_lista_de_actividades">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_discover">Discover</string>
    <string name="title_saved">Saved</string>
    <string name="username">Username</string>
    <string name="email">E-mail</string>
    <string name="phoneNumber">Phone number</string>
    <string name="password">Password</string>
    <string name="teachMe">Teach me how to use it</string>
    <string name="text_bluetooth_adapter_error">Error Bluetooth Adapter, porfavor reinicia tu telefono</string>
    <string name="text_unknown_error">Unknown error: please restart the app</string>
    <string name="text_unable_to_connect_to_device">Cannot connect the device</string>
    <string name="text_device_connection_was_lost">Connection was lost</string>
    <string name="text_usb_service_foreground_message">This service will manage all usb services</string>
    <string name="text_bluetooth_service">Bluetooth Service</string>
    <string name="text_connected_to">Connected to</string>
    <string name="text_connection_lost">Connection lost</string>
    <string name="text_paired_devices">Choose device to connect</string>
    <string name="text_bluetooth_adaptor_error">Error with the bluetooth adaptader!</string>
    <string name="text_no_paired_devices">Devices not paired</string>
    <string name="text_none_found">Not found</string>
    <string name="text_not_connected">Not connected</string>
    <string name="text_connecting">Connecting&#8230;.</string>
    <string name="text_disconnect">Disconnect!</string>
    <string name="text_connected">Connected</string>
    <string name="text_settings">Settings</string>
    <string name="text_connect">Connect</string>
    <string name="text_reset">Reset</string>
    <string name="preference_auto_connect">auto_connect</string>
    <string name="text_disconnect_confirm">Are you sure you want to disconnect?</string>
    <string name="text_yes_confirm">Yes</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_bt_service_not_running">Bluetooth service is not running!</string>
    <string name="text_bt_not_enabled">Bluetooth is not up!</string>
    <string name="preference_update_pool_interval">preference_update_pool_interval</string>
    <string name="req_username_password">4-30 characters (A-Z, a-z, 0-9 only)</string>
    <string name="req_email">e. g. name@mail.com</string>
    <string name="req_phone">e. g. +34612387954</string>
    <string name="user_registred">Registered user successfully</string>
    <string name="non_valid_email">The email entered is invalid</string>
    <string name="non_valid_password">The password entered is invalid</string>
    <string name="user_not_found">The email and password you entered did not match our records. Please double-check and try again.</string>
    <string name="group_of_activities_add_new">Groups of Activities > Add New</string>
    <string name="add_new">Add New</string>
    <string name="name">Name</string>
    <string name="general">General</string>
    <string name="description">Description</string>
    <string name="color">Colour</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="orange">Orange</string>
    <string name="grey">Grey</string>
    <string name="save_group">Save Group</string>
    <string name="sharedPreferencesKey">a</string>
    <string name="error_colour">You have to select a colour</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="error_name">The name can\'t be null</string>
    <string name="warning_back">All unsaved changes will be lost</string>
    <string name="new_group_created">New Group Created</string>
    <string name="warning_delete_group">This group will be deleted</string>
    <string name="updated_group">Updated Group</string>
    <string name="messages">Messages:</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="paired_devices">Paired devices:</string>
    <string name="no_messages">No messages sent!</string>
    <string name="no_bluetooth">Bluetooth not available.</string>
    <string name="device_name_format">Device: %1$s</string>
    <string name="status_connecting">Status: Connecting</string>
    <string name="status_connected">Status: Connected</string>
    <string name="status_disconnected">Status: Disconnected</string>
    <string name="connect">Connect</string>
    <string name="connected">Connected</string>
    <string name="disconnect">Disconnect</string>
    <string name="connection_failed">Connection Failed.</string>
    <string name="bluetooth_unavailable">Connection Failed.</string>
    <string name="message_send_error">Error sending message!</string>
    <string name="you_sent">You</string>
    <string name="title_activity_learn">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="top_edit">" > Edit"</string>
    <string name="input" translatable="false">Input</string>
    <string name="add_new_activity">Add New Activity</string>
    <string name="save_activity">Save Activity</string>
    <string name="error_input">The input can\'t be null</string>
    <string name="new_activity_created">New Activity Created</string>
    <string name="updated_activity">Updated Activity</string>
    <string name="save_macropad">Save</string>
    <string name="notSave_macropad">Delete</string>
    <string name="preference_last_connected_device_macAddress">Last Device MAC</string>
    <string name="preference_last_connected_device_name">last device name</string>
    <string name="groups_of_activities">Groups of Activities</string>
    <string name="my_groups_of_activities">My Groups of Activities</string>
    <string name="new_group_of_activities">New group of activities</string>
    <string name="log_out">Log Out</string>
</resources>