<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SignUpActivity">

    <LinearLayout
        android:layout_width="364dp"
        android:layout_height="114dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.085">

<!--        <TextView-->
<!--            android:id="@+id/textView"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:gravity="left"-->
<!--            android:text="@string/signup"-->
<!--            android:textColor="#000000"-->
<!--            android:textSize="14sp"-->
<!--            android:textStyle="normal"-->
<!--            tools:ignore="MissingConstraints"-->
<!--            tools:layout_editor_absoluteX="0dp"-->
<!--            tools:layout_editor_absoluteY="170dp" />-->

        <Space
            android:layout_width="match_parent"
            android:layout_height="29dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/back"
                style="@android:style/Widget.DeviceDefault.ImageButton"
                android:layout_width="69dp"
                android:layout_height="61dp"
                android:background="@null"
                app:srcCompat="@drawable/vector" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/signup"
                android:textColor="#000000"
                android:textSize="34sp"
                android:textStyle="bold"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="170dp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="302dp"
        android:layout_height="458dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.69"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedTextFieldUsername"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:lines="1"
                android:maxLines="1"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/reqUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/req_username_password" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="14dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedTextFieldEmail"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:lines="1"
                android:maxLines="1"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/reqEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/req_email" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="14dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedTextFieldPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:lines="1"
                android:maxLines="1"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/reqPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/req_username_password" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="14dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedTextFieldPhone"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phoneNumber">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:lines="1"
                android:maxLines="1"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/reqPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/req_phone" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="14dp" />

        <Button
            android:id="@+id/btn1_1"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="206dp"
            android:layout_height="63dp"
            android:text="@string/signup"
            android:textColor="#000000"
            app:iconTint="#000000"
            app:strokeColor="#000000"
            tools:ignore="MissingConstraints" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
